terraform-best-practices/aws/ecs/validate-ecs-task-definition-nonroot-user/validate-ecs-task-definition-nonroot-user.yaml
apiVersion: json.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: validate-ecs-task-definition-nonroot-user
  labels:
    ecs.aws.tags.kyverno.io: ecs-service
  annotations:
    policies.kyverno.io/title: Validate ECS Task definition nonroot user for EC2 instances
    policies.kyverno.io/category: ECS Best Practices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/description: >-
      This policy checks if ECSTaskDefinitions specify a user for 
      Amazon Elastic Container Service (Amazon ECS) EC2 launch type 
      containers to run on. The rule fails if the ‘user’ parameter is not present or set to ‘root’.
spec:
  rules:
    - name: validate-ecs-task-definition-nonroot-user
      match:
        all:
        - (planned_values.root_module.resources[?type=='aws_ecs_task_definition'] | length(@) > `0`): true
        - ~.(planned_values.root_module.resources[?type=='aws_ecs_task_definition']):
            values:
                requires_compatibilities:
                    (contains(@, 'EC2')): true
      assert:
        all:
        - message: For ECS EC2 containers, `user` parameter should not be set to `root`
          check:
            ~.(planned_values.root_module.resources[?type=='aws_ecs_task_definition']):
                values:
                    ~.(json_parse(container_definitions)):
                        (!user): false
                        (starts_with(user || '', '0:') || ends_with(user || '', ':0')): false
                        (user != null): true
                        ((user != '0')): true
